--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
   </header>
   <main aria-label="pomodoro timer">
-    <h1></h1><!--just to avoid wanings-->
+    <h1 style="display:none">Pomodoro Timer</h1><!--just to avoid wanings-->
     <div class="shadow-wrapper">
       <div class="timer-wrapper">
         <a href="" role="button" id="timer" class="timer" data-action="start" tabindex="0">
@@ -50,7 +50,7 @@
   </main>
 
   <dialog id="settings">
-    <form method="dialog">
+    <form>
       <fieldset>
         <h2>Settings</h2>
         <button id="close-settings" aria-label="Close Settings" value="cancel"><i class="icon-close"></i></button>
