--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
   </header>
   <main aria-label="pomodoro timer">
-    <h1 style="display:none">Pomodoro Timer</h1><!--just to avoid wanings-->
+    <h1 style="clip-path: circle(0)">Pomodoro Timer</h1><!--just to avoid wanings-->
     <div class="shadow-wrapper">
       <div class="timer-wrapper">
         <a href="" role="button" id="timer" class="timer" data-action="start" tabindex="0">
