--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <fieldset id="times">
         <h3>Time (minutes)</h3>
         <label for="pomodoro">pomodoro</label>
-        <input type="number" name="pomodoro" id="pomodoro" required min="1" max="60" autofocus>
+        <input type="number" name="pomodoro" id="pomodoro" required min="1" max="60">
         <label for="short-break">short break</label>
         <input type="number" name="short_break" id="short-break" required  min="1" max="60">
         <label for="long-break">long break</label>
